JeevanRakshak/force-app/main/default/objects/First_Aid__c/First_Aid__c.object-meta.xml
<CustomObject>
    <label>First Aid</label>
    <nameField>
        <label>First Aid</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>First Aid</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>