JeevanRakshak/force-app/main/default/objects/First_Aid__c/fields/Emergency_Case__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emergency Case</label>
    <referenceTo>Emergency_Case__c</referenceTo>
    <relationshipLabel>First Aid</relationshipLabel>
    <relationshipName>First_Aid</relationshipName>
    <type>Lookup</type>
</CustomField>