JeevanRakshak/force-app/main/default/objects/First_Aid__c/fields/Emergency_Type__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Type__c</fullName>
    <label>Emergency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Burn</fullName>
            </value>
            <value>
                <fullName>Animal Bite</fullName>
            </value>
            <value>
                <fullName>Health Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>