JeevanRakshak/force-app/main/default/objects/First_Aid__c/fields/Equipment_Needed__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Needed__c</fullName>
    <label>Equipment Needed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>