JeevanRakshak/force-app/main/default/objects/First_Aid__c/fields/Precautions__c.field-meta.xml
<CustomField>
    <fullName>Precautions__c</fullName>
    <label>Precautions</label>
    <type>TextArea</type>
</CustomField>