JeevanRakshak/force-app/main/default/objects/First_Aid__c/fields/Steps__c.field-meta.xml
<CustomField>
    <fullName>Steps__c</fullName>
    <label>Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>