JeevanRakshak/force-app/main/default/objects/First_Aid__c/validationRules/First_Aid_Steps_must_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Aid_Steps_must_not_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Steps__c)</errorConditionFormula>
    <errorMessage>First Aid Steps connot be empty</errorMessage>
</ValidationRule>