JeevanRakshak/force-app/main/default/objects/First_Aid__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Emergency_Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Severity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>